--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 section {
     padding-top: 120px;
+    position: relative;
+}
+
+section::before{
+    z-index: -1;
+    content: '';
+    font-size: 72px;
+    color: grey;
+    opacity: 0.25;
+    position: absolute;
+    font-weight: 700;
+    top: 20px;
+    left: -30px;
 }
 
 .navbar { 
@@ -12,7 +25,7 @@ section {
     border-radius: 24px;
 }
 
-.btn.button:hover{
+.btn.button:hover, .btn.button.active{
     border: 3px solid black;
     background-color: black;
     color: white;
@@ -30,8 +43,26 @@ section {
     width: 60px;
 }
 
+.about::before{
+    content: "About";
+}
+
 #arrow {
     animation: 1s upDown infinite;
+}
+
+.about-exp-item {
+    margin-top: 32px;
+}
+
+.about-exp-item-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-exp-item-detail{
+    display: none;
 }
 
 @keyframes upDown{
